--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,7 @@ rich==14.0.0
 rich-toolkit==0.14.1
 rpds-py==0.24.0
 safetensors==0.5.3
+scikit-learn==1.6.1
 scipy==1.15.2
 sentencepiece==0.2.0
 setuptools==79.0.0
